# cp-sheet

./: .bazelrc  .clang-format  .clangd  .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  compile_flags.txt  pyproject.toml  rules.bzl
.devcontainer/: Dockerfile  devcontainer.json  extra.sh  sources.list  sources.list.amd64  sources.list.arm64
.verify-helper/: config.toml
ad-hoc/: concave-shortest-path.hpp  floor-ceil-range-test.cpp  li-chao-segtree.hpp  min-plus-convex-test.cpp  min-plus-convex.hpp  monge-fixed-len-shortest-path.hpp  monge-shortest-path.hpp  monotone-minima.hpp  offline-query-test.cpp  palindromic-decomp-dp-test.cpp  palindromic-decomp-dp.hpp  scary-product-test.cpp  scary-product.hpp  segbeats.hpp
algebra/: BUILD.bazel  barrett-test.cpp  barrett.hpp  chapter.tex  matrix-test.cpp  matrix.hpp  modint-test.cpp  modint.hpp  monoidal-test.cpp  monoidal.hpp  nft-test.cpp  nft.hpp
contest/: BUILD.bazel  base.hpp  fast-input-test.cpp  fast-input.hpp  yc-test.cpp  yc.hpp
data-structure/: BUILD.bazel  assignment-segtree-test.cpp  assignment-segtree.hpp  binary-indexed-tree-test.cpp  binary-indexed-tree.hpp  chapter.tex  fast-set.hpp  flatten-vector-test.cpp  flatten-vector.hpp  hash-map-test.cpp  lazy-segtree-test.cpp  lazy-segtree.hpp  line-container-test.cpp  persistent-array.hpp  persistent-heap-test.cpp  persistent-lazy-segtree-test.cpp  persistent-lazy-segtree.hpp  queue-aggregation-test.cpp  queue-aggregation.hpp  range-parallel-unionfind.hpp  segtree.hpp  static-range-test.cpp  static-range.hpp  treap-test.cpp  treap.hpp  unionfind-test.cpp  unionfind.hpp
geometry/: BUILD.bazel  base.hpp  ccw.hpp  circular.hpp  closest-pair-test.cpp  closest-pair.hpp  linear.hpp  polygonal.hpp
graph/: BUILD.bazel  bipartite-test.cpp  bipartite.hpp  block-cut-test.cpp  complement-graph-test.cpp  complement-graph.hpp  dfs-tree.hpp  dominator-test.cpp  enumerate-triangles-test.cpp  eulerian-trail-test.cpp  matching-test.cpp  matching.hpp  mst-kruskal-test.cpp  mst-kruskal.hpp  scc-test.cpp  scc.hpp  two-edge-cc-test.cpp
kactl/: Makefile  kactl.fdb_latexmk  kactl.tex  kactlpkg.sty  kactlprocessor.py  test-session.tex
number-theory/: eratosthenes-test.cpp  extgcd-test.cpp  factor-test.cpp  int-kth-root-test.cpp  int-kth-root.hpp  multiplicative-eval-test.cpp  multiplicative-sum-test.cpp  multiplicative-sum.hpp
oj-test/: aplusb.test.cpp  closest-pair.test.cpp  enumerate-triangles.test.cpp  point-set-range-composite.test.cpp  queue-operate-all-composite.test.cpp  range-parallel-unionfind.test.cpp  run_oj.sh  static-range-sum-static-range.test.cpp  static-rmq.test.cpp  tree-path-composite-sum.test.cpp
oj-test/aizu/CGL/: BUILD.bazel  CGL_1_A.test.cpp  CGL_1_B.test.cpp  CGL_2_A.test.cpp
other/: BUILD.bazel  two-sat-test.cpp  two-sat.hpp
src/: .bazelrc  BUILD.bazel  MODULE.bazel  bazel-bin  bazel-out  bazel-src  bazel-testlogs  rules.bzl  test-compiles.cpp
src/ad-hoc/: BUILD  BUILD.bazel  chapter.tex  concave-shortest-path.hpp  floor-ceil-range-test.cpp  floor-ceil-range.hpp  golden-section-search.hpp  li-chao-segtree.hpp  min-plus-convex-test.cpp  min-plus-convex.hpp  monge-fixed-len-shortest-path.hpp  monge-shortest-path.hpp  monotone-minima.hpp  offline-query-test.cpp  offline-query.hpp  palindromic-decomp-dp-test.cpp  palindromic-decomp-dp.hpp  scary-product-test.cpp  scary-product.hpp  segbeats.hpp  tree-dp-test.cpp  tree-dp.hpp
src/algebra/: BUILD.bazel  barrett-test.cpp  barrett.hpp  chapter.tex  matrix-test.cpp  matrix.hpp  modint-test.cpp  modint.hpp  monoid-pow.hpp  monoidal-sized.hpp  nft-test.cpp  nft.hpp
src/contest/: BUILD  BUILD.bazel  Makefile  base-with-main.cpp  base.hpp  bashrc  chapter.tex  extra.hpp  fast-input-test.cpp  fast-input.hpp  fast-input_test.cpp  vimrc  yc-test.cpp
src/data-structure/: BUILD.bazel  assignment-segtree-test.cpp  assignment-segtree.hpp  binary-indexed-tree-test.cpp  binary-indexed-tree.hpp  binary-indexed-tree_test.cpp  chapter.tex  fast-set-test.cpp  fast-set.hpp  flatten-vector-test.cpp  flatten-vector.hpp  hash-map-test.cpp  hash-map.hpp  lazy-segtree-test.cpp  lazy-segtree.hpp  line-container-test.cpp  line-container.hpp  meldable-heap-test.cpp  meldable-heap.hpp  persistent-array.hpp  persistent-heap-test.cpp  persistent-heap.hpp  persistent-lazy-segtree.hpp  queue-aggregation-test.cpp  queue-aggregation.hpp  range-parallel-unionfind.hpp  segtree.hpp  static-range-test.cpp  static-range.hpp  treap-test.cpp  treap.hpp  unionfind-test.cpp  unionfind.hpp
src/geometry/: BUILD.bazel  base.hpp  ccw.hpp  chapter.tex  circular.hpp  closest-pair-test.cpp  closest-pair.hpp  closest-pair_test.cpp  linear.hpp  polygonal.hpp
src/graph/: BUILD.bazel  bipartite-test.cpp  bipartite.hpp  block-cut-test.cpp  block-cut.hpp  chapter.tex  complement-graph-test.cpp  complement-graph.hpp  dfs-tree.hpp  dominator-test.cpp  dominator.hpp  enumerate-triangles-test.cpp  enumerate-triangles.hpp  enumerate-triangles_test.cpp  eulerian-trail-test.cpp  eulerian-trail.hpp  hld.hpp  matching-test.cpp  matching.hpp  maxflow.hpp  mcmf.hpp  mst-kruskal-test.cpp  mst-kruskal.hpp  scc-test.cpp  two-edge-cc-test.cpp  two-edge-cc.hpp  two-sat.hpp
src/number-theory/: BUILD.bazel  chapter.tex  eratosthenes-test.cpp  eratosthenes.hpp  eratosthenes_test.cpp  extgcd-test.cpp  extgcd.hpp  factor-test.cpp  factor.hpp  int-kth-root-test.cpp  int-kth-root.hpp  min_of_mod_of_linear.test.cpp  multiplicative-eval-test.cpp  multiplicative-eval.hpp  multiplicative-sum-test.cpp  multiplicative-sum.hpp  sum_of_floor_of_linear.test.cpp
src/string/: BUILD  BUILD.bazel  chapter.tex  eertree-test.cpp  eertree.hpp  hashed-string-2d-test.cpp  hashed-string-2d.hpp  hashed-string-test.cpp  hashed-string.hpp  hashint.hpp  manacher-test.cpp  manacher.hpp  suffix-array-test.cpp  suffix-array.hpp  suffix-array_test.cpp  z-algorithm-test.cpp  z-algorithm.hpp  z-algorithm_test.cpp
src/tree/: BUILD.bazel  cartesian-tree-test.cpp  cartesian-tree.hpp  chapter.tex  hld-test.cpp  hld.hpp  tree-dp-test.cpp  tree-dp.hpp
string/: eertree.hpp  manacher.hpp  (+7 more)
(+177 files in other folders)
