load("//:rules.bzl", "my_cc_library", "my_cc_test")

cc_library(
    name = "base",
    hdrs = ["base.hpp"],
    visibility = ["//visibility:public"],
)

my_cc_library(
    name = "fast-input",
    hdrs = ["fast-input.hpp"],
)

my_cc_test(
    name = "fast-input-test",
    srcs = ["fast-input-test.cpp"],
    deps = ["//contest:fast-input"],
)

cc_library(
    name = "yc",
    hdrs = ["yc.hpp"],
)

my_cc_test(
    name = "yc-test",
    srcs = ["yc-test.cpp"],
    deps = ["//contest:yc"],
)
