load("//:rules.bzl", "my_cc_library", "my_cc_test")

my_cc_library(
    name = "floor-ceil-range",
    hdrs = ["floor-ceil-range.hpp"],
)

my_cc_test(
    name = "floor-ceil-range-test",
    srcs = ["floor-ceil-range-test.cpp"],
    deps = ["//src/ad-hoc:floor-ceil-range"],
)

my_cc_library(
    name = "tree-dp",
    hdrs = ["tree-dp.hpp"],
)

my_cc_test(
    name = "tree-dp-test",
    srcs = ["tree-dp-test.cpp"],
    deps = [
        "//src/ad-hoc:tree-dp",
        "//src/algebra:modint",
    ],
)

my_cc_library(
    name = "monotone-minima",
    hdrs = ["monotone-minima.hpp"],
)

my_cc_library(
    name = "min-plus-convex",
    hdrs = ["min-plus-convex.hpp"],
    deps = [
        "//src/ad-hoc:monotone-minima",
    ],
)

my_cc_test(
    name = "min-plus-convex-test",
    srcs = ["min-plus-convex-test.cpp"],
    deps = [
        "//src/ad-hoc:min-plus-convex",
    ],
)
