load("//:rules.bzl", "my_cc_library", "my_cc_test")

my_cc_library(
    name = "modint",
    hdrs = ["modint.hpp"],
)

my_cc_test(
    name = "modint-test",
    srcs = ["modint-test.cpp"],
    deps = ["//src/algebra:modint"],
)

my_cc_library(
    name = "nft",
    hdrs = ["nft.hpp"],
)

my_cc_test(
    name = "nft-test",
    srcs = ["nft-test.cpp"],
    deps = [
        "//src/algebra:modint",
        "//src/algebra:nft",
    ],
)

my_cc_library(
    name = "barrett",
    hdrs = ["barrett.hpp"],
)

my_cc_test(
    name = "barrett-test",
    srcs = ["barrett-test.cpp"],
    deps = [
        "//src/algebra:barrett",
    ],
)

my_cc_library(
    name = "matrix",
    hdrs = ["matrix.hpp"],
)

my_cc_test(
    name = "matrix-test",
    srcs = ["matrix-test.cpp"],
    deps = [
        "//src/algebra:matrix",
        "//src/algebra:modint",
    ],
)