load("//:rules.bzl", "my_cc_library", "my_cc_test")

my_cc_library(
    name = "binary-indexed-tree",
    hdrs = ["binary-indexed-tree.hpp"],
)

my_cc_library(
    name = "segtree",
    hdrs = ["segtree.hpp"],
)

my_cc_library(
    name = "fast-set",
    hdrs = ["fast-set.hpp"],
)

my_cc_library(
    name = "assignment-segtree",
    hdrs = ["assignment-segtree.hpp"],
    deps = [
        "//src/data-structure:fast-set",
        "//src/data-structure:segtree",
    ],
)

my_cc_test(
    name = "binary-indexed-tree-test",
    srcs = ["binary-indexed-tree-test.cpp"],
    deps = [
        "//src/data-structure:binary-indexed-tree",
    ],
)

my_cc_test(
    name = "assignment-segtree-test",
    srcs = ["assignment-segtree-test.cpp"],
    deps = [
        "//src/algebra:modint",
        "//src/data-structure:assignment-segtree",
    ],
)

my_cc_library(
    name = "treap",
    hdrs = ["treap.hpp"],
)

my_cc_test(
    name = "treap-test",
    srcs = ["treap-test.cpp"],
    deps = [
        "//src/algebra:modint",
        "//src/data-structure:treap",
    ],
)

my_cc_library(
    name = "lazy-segtree",
    hdrs = ["lazy-segtree.hpp"],
)

my_cc_test(
    name = "lazy-segtree-test",
    srcs = ["lazy-segtree-test.cpp"],
    deps = [
        "//src/algebra:modint",
        "//src/data-structure:lazy-segtree",
    ],
)

my_cc_library(
    name = "meldable-heap",
    hdrs = ["meldable-heap.hpp"],
)

my_cc_test(
    name = "meldable-heap-test",
    srcs = ["meldable-heap-test.cpp"],
    deps = [
        "//src/data-structure:meldable-heap",
    ],
)
