load("//:rules.bzl", "my_cc_library", "my_cc_test")

# Dangerous; do not use this for now
# my_cc_library(
#     name = "base",
#     hdrs = ["base.hpp"],
# )

my_cc_library(
    name = "closest-pair",
    hdrs = ["closest-pair.hpp"],
)

my_cc_test(
    name = "closest-pair_test",
    srcs = ["closest-pair_test.cpp"],
    deps = ["//src/geometry:closest-pair"],
)
