load("//:rules.bzl", "my_cc_library", "my_cc_test")

my_cc_library(
    name = "base",
    hdrs = ["base.hpp"],
)

my_cc_library(
    name = "ccw",
    hdrs = ["ccw.hpp"],
    deps = ["//src/geometry:base"],
)

my_cc_library(
    name = "linear",
    hdrs = ["linear.hpp"],
    deps = ["//src/geometry:ccw"],
)

my_cc_library(
    name = "polygonal",
    hdrs = ["polygonal.hpp"],
    deps = ["//src/geometry:linear"],
)

my_cc_library(
    name = "circular",
    hdrs = ["circular.hpp"],
    deps = ["//src/geometry:linear"],
)

my_cc_library(
    name = "closest-pair",
    hdrs = ["closest-pair.hpp"],
    deps = ["//src/geometry:base"],
)

my_cc_test(
    name = "closest-pair-test",
    srcs = ["closest-pair-test.cpp"],
    deps = ["//src/geometry:closest-pair"],
)
