load("//:rules.bzl", "my_cc_library", "my_cc_test")

my_cc_library(
    name = "enumerate-triangles",
    hdrs = ["enumerate-triangles.hpp"],
)

my_cc_test(
    name = "enumerate-triangles-test",
    srcs = ["enumerate-triangles-test.cpp"],
    deps = ["//src/graph:enumerate-triangles"],
)

my_cc_library(
    name = "eulerian-trail",
    hdrs = ["eulerian-trail.hpp"],
)

my_cc_test(
    name = "eulerian-trail-test",
    srcs = ["eulerian-trail-test.cpp"],
    deps = ["//src/graph:eulerian-trail"],
)

my_cc_library(
    name = "bipartite",
    hdrs = ["bipartite.hpp"],
)

my_cc_test(
    name = "bipartite-test",
    srcs = ["bipartite-test.cpp"],
    deps = ["//src/graph:bipartite"],
)

my_cc_library(
    name = "complement-graph",
    hdrs = ["complement-graph.hpp"],
    deps = ["//src/data-structure:flatten-vector"],
)

my_cc_test(
    name = "complement-graph-test",
    srcs = ["complement-graph-test.cpp"],
    deps = ["//src/graph:complement-graph"],
)
