load("//:rules.bzl", "my_cc_library", "my_cc_test")

my_cc_library(
    name = "z-algorithm",
    hdrs = ["z-algorithm.hpp"],
)

my_cc_library(
    name = "suffix-array",
    hdrs = ["suffix-array.hpp"],
)

my_cc_test(
    name = "z-algorithm-test",
    srcs = ["z-algorithm-test.cpp"],
    deps = ["//src/string:z-algorithm"],
)

my_cc_test(
    name = "suffix-array-test",
    srcs = ["suffix-array-test.cpp"],
    deps = ["//src/string:suffix-array"],
)

my_cc_library(
    name = "manacher",
    hdrs = ["manacher.hpp"],
)

my_cc_test(
    name = "manacher-test",
    srcs = ["manacher-test.cpp"],
    deps = ["//src/string:manacher"],
)

my_cc_library(
    name = "hashint",
    hdrs = ["hashint.hpp"],
)

my_cc_library(
    name = "hashed-string",
    hdrs = ["hashed-string.hpp"],
)

my_cc_test(
    name = "hashed-string-test",
    srcs = ["hashed-string-test.cpp"],
    deps = [
        "//src/string:hashed-string",
        "//src/string:hashint",
    ],
)

my_cc_library(
    name = "eertree",
    hdrs = ["eertree.hpp"],
)

my_cc_test(
    name = "eertree-test",
    srcs = ["eertree-test.cpp"],
    deps = ["//src/string:eertree"],
)

my_cc_library(
    name = "hashed-string-2d",
    hdrs = ["hashed-string-2d.hpp"],
)

my_cc_test(
    name = "hashed-string-2d-test",
    srcs = ["hashed-string-2d-test.cpp"],
    deps = [
        "//src/string:hashed-string-2d",
        "//src/string:hashint",
    ],
)
