load("//:rules.bzl", "my_cc_library", "my_cc_test")

my_cc_library(
    name = "z-algorithm",
    hdrs = ["z-algorithm.hpp"],
)

my_cc_library(
    name = "suffix-array",
    hdrs = ["suffix-array.hpp"],
)

my_cc_test(
    name = "z-algorithm-test",
    srcs = ["z-algorithm-test.cpp"],
    deps = ["//string:z-algorithm"],
)

my_cc_test(
    name = "suffix-array-test",
    srcs = ["suffix-array-test.cpp"],
    deps = ["//string:suffix-array"],
)

my_cc_library(
    name = "manacher",
    hdrs = ["manacher.hpp"],
)

my_cc_test(
    name = "manacher-test",
    srcs = ["manacher-test.cpp"],
    deps = ["//string:manacher"],
)

my_cc_library(
    name = "hashint",
    hdrs = ["hashint.hpp"],
)

my_cc_library(
    name = "hashed-string",
    hdrs = ["hashed-string.hpp"],
)

my_cc_test(
    name = "hashed-string-test",
    srcs = ["hashed-string-test.cpp"],
    deps = [
        "//string:hashed-string",
        "//string:hashint",
    ],
)

my_cc_library(
    name = "eertree",
    hdrs = ["eertree.hpp"],
)

my_cc_test(
    name = "eertree-test",
    srcs = ["eertree-test.cpp"],
    deps = ["//string:eertree"],
)

my_cc_library(
    name = "hashed-string-2d",
    hdrs = ["hashed-string-2d.hpp"],
)

my_cc_test(
    name = "hashed-string-2d-test",
    srcs = ["hashed-string-2d-test.cpp"],
    deps = [
        "//string:hashed-string-2d",
        "//string:hashint",
    ],
)
