load("//:rules.bzl", "my_cc_library", "my_cc_test")

my_cc_library(
    name = "hld",
    hdrs = ["hld.hpp"],
    deps = ["//data-structure:flatten-vector"],
)

my_cc_test(
    name = "hld-test",
    srcs = ["hld-test.cpp"],
    deps = ["//tree:hld"],
)

my_cc_library(
    name = "cartesian-tree",
    hdrs = ["cartesian-tree.hpp"],
)

my_cc_test(
    name = "cartesian-tree-test",
    srcs = ["cartesian-tree-test.cpp"],
    deps = ["//tree:cartesian-tree"],
)

my_cc_library(
    name = "tree-dp",
    hdrs = ["tree-dp.hpp"],
)

my_cc_test(
    name = "tree-dp-test",
    srcs = ["tree-dp-test.cpp"],
    deps = [
        "//algebra:modint",
        "//data-structure:flatten-vector",
        "//tree:tree-dp",
    ],
)
